Fix - styling: Foundation for dropdown didn't include a z-index
CT-1397

--- a/css/buttons.foundation.scss
+++ b/css/buttons.foundation.scss
@@ -19,6 +19,7 @@ ul.dt-buttons.button-group a {
 
 div.dt-button-collection {
 	position: absolute;
+	z-index: 2002;
 
 	@include dtb-fixed-collection();
 
